# resume-builder

./: .dockerignore  .env.development  .env.example  .env.local.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.dev.api  Dockerfile.dev.script  MY_RESUMES_IMPROVEMENTS_TESTING.md  PROGRAMMATIC_SEO_PLAN.md  README.md  RESUME_LIMIT_FIX.md  SECURITY_ENV_VARS.md  SUPABASE_SETUP_RUNBOOK.md  TESTING_PLAN.md  UI_INTEGRATION_GUIDE.md  app.py  benchmark_yaml.py  benchmark_yaml_dump.py  benchmark_yaml_fast.py  cliff.toml  database-migration-add-preference-columns.sql  database-migration-user-preferences.sql  docker-compose.yml  generate_jobs_matrix.py  job_engine.py  jobs_content.py  jobs_matrix.json  jobs_pseo.py  latex_utils.py  package-lock.json  package.json  plan.md  playwright.config.ts  pnpm-lock.yaml  (+12 more)
.Jules/: bolt.md  palette.md
.claude/: settings.local.json
.devcontainer/: .devcontainer.json  devcontainer.json
.github/: BRANCH_PROTECTION_SETUP.md  RELEASE_WORKFLOW.md
.jules/: bolt.md  palette.md
docs/: CI-CD.md  OAUTH_QUICK_START.md  OAUTH_SETUP_GUIDE.md  README.md  SUPABASE_KEY_MIGRATION.md
e2e/: global-setup.ts
email-templates/: README.md  VARIABLES.md  base-template.html  build.js  change-email.html  confirm-signup.html  magic-link.html  package.json  reset-password.html  trustpilot-review.html
icons/: icon_preview.html
resume-builder-ui/: .env.example  .eslintrc.json  README.md  TESTING_PLAN.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  (+2 more)
(+988 files in other folders)
